Ngày 5/3/2024 lúc 3h13p đã hoàn thiện xong giao diện đăng nhập

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="anakiwa">#8CC4DF</color>
     <color name="honeysuckle">#E2FF65</color>
 <!--    mã màu 2 : Mã này nhìn đẹp-->
-    <color name="deep_koamaru">#363753</color>
+    <color name="colortextChu">#363753</color>
     <color name="ethereal_blue">#DFE3EE</color>
     <color name="mostly_white">#FEFEFE</color>
     <color name="natural_blue">#5CD2C6</color>
