--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -48,7 +48,7 @@
             android:layout_alignParentTop="true"
             android:background="@drawable/edit_dn_bg"
             android:hint="Nhập tài khoản"
-            android:textColorHint="#5A7B8C"
+            android:textColorHint="@color/colortextChu"
             android:paddingLeft="10dp"
             android:drawableRight="@drawable/account"
 
@@ -61,12 +61,30 @@
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/edit_dn_bg"
             android:layout_below="@+id/edt_dn_us"
-            android:textColorHint="#5A7B8C"
+            android:textColorHint="@color/colortextChu"
             android:paddingLeft="10dp"
             android:drawableEnd="@drawable/password"
+            />
+        <CheckBox
+            android:id="@+id/chk_remember"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edt_dn_ps"
+            android:text="Ghi nhớ tài khoản"
+            android:layout_alignStart="@+id/edt_dn_ps"
+            android:textColor="@color/colortextChu"
+            />
+        <TextView
+            android:id="@+id/tv_forgotpass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/quen_mk"
+            android:textColor="@color/colortextChu"
+            android:layout_below="@+id/chk_remember"
+            android:layout_alignEnd="@+id/edt_dn_ps"
             />
     </RelativeLayout>
     <LinearLayout
@@ -83,7 +101,7 @@
             android:layout_weight="1"
             android:text="Đăng Nhập"
             android:background="@drawable/btn_dn_bg"
-            android:textColor="@color/deep_koamaru"
+            android:textColor="@color/colortextChu"
             />
         <Button
             android:id="@+id/btn_tv_dangnhap"
@@ -93,7 +111,27 @@
             android:layout_marginLeft="10dp"
             android:text="Trở Về"
             android:background="@drawable/btn_dn_bg"
-            android:textColor="@color/deep_koamaru"
+            android:textColor="@color/colortextChu"
             />
     </LinearLayout>
+    <TextView
+        android:id="@+id/tv_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bạn chưa có tài khoản ? Nhấn vào đây  "
+        android:textColor="@color/colortextChu"
+        android:textSize="18dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Version 1.0.0"
+        android:textColor="@color/colortextChu"
+        android:layout_gravity="end"
+        android:layout_marginTop="90dp"
+        android:layout_marginRight="10dp"
+        />
 </LinearLayout>
