Ngày 6/3/2024 đã thêm hộp thoại alert dialog và quên mật khẩu

--- a/app/src/main/res/layout/activity_man_hinh_welcome.xml
+++ b/app/src/main/res/layout/activity_man_hinh_welcome.xml
@@ -32,5 +32,28 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv_wc_cm"
+        >
+
+        <TextView
+            android:id="@+id/tv_wc_sl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/fontviettay"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text=""
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.745"
+            tools:ignore="MissingConstraints" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
