--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/backgroundinapp"
-    android:id="@+id/layout_all">
+    android:id="@+id/dl_am">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
